--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,9 @@
-spring.flyway.enabled=false
+#JPA Config
+spring.datasource.url=jdbc:mysql://localhost/rmg_school_db?createDatabaseIfNotExist=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
+spring.datasource.username=root
+spring.datasource.password=root
 jwt.secret=secret
 jwt.access-token-expiration=86400000
-
-
-
-spring.jpa.defer-datasource-initialization=true
-spring.h2.console.enabled=true
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
+spring.flyway.enabled=false
