--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -8,3 +8,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
+#Multipart
+spring.servlet.multipart.max-file-size=30GB
+spring.servlet.multipart.max-request-size=30GB
