--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,7 @@ jwt.secret=secret
 jwt.access-token-expiration=86400000
 spring.jpa.hibernate.ddl-auto=update
 spring.flyway.enabled=false
+
+#Multipart
+spring.servlet.multipart.max-file-size=30GB
+spring.servlet.multipart.max-request-size=30GB
