--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,15 @@
 spring.datasource.url=jdbc:mysql://localhost/rmg_school_db?createDatabaseIfNotExist=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=
 jwt.secret=secret
 jwt.access-token-expiration=86400000
 spring.jpa.hibernate.ddl-auto=update
 spring.flyway.enabled=false
-
 #Multipart
 spring.servlet.multipart.max-file-size=30GB
 spring.servlet.multipart.max-request-size=30GB
+# Redis
+redis.host=localhost
+redis.port=6379
+
