--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.url=jdbc:mysql://localhost/rmg_school_db?createDatabaseIfNotExist=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 jwt.secret=secret
 jwt.access-token-expiration=86400000
 spring.jpa.hibernate.ddl-auto=update
